# artemis-monitor

./: .env.example  .gitignore  README.md  pyproject.toml  pyrightconfig.json
artemis/: config.py  main.py  space_weather.py  ui.py
crates/dsn_parser/: Cargo.toml  pyproject.toml
crates/dsn_parser/src/: lib.rs
docs/: architecture.md  arquitectura.md
typings/dsn_parser/: __init__.pyi
